Fix hero image jumping on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -68,7 +68,7 @@ p {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top right;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	width: 100%;
 	height: 100%;
 }
@@ -323,6 +323,7 @@ p {
 	.hero {
 		background-image: url("/images/hero-background-image-desktop.png");
 		background-position: center;
+		background-attachment: fixed;
 	}
 
 	.hero > .inner > .content {
